# sec-microservice-rh

./: .gitignore  Dockerfile  docker-compose.yaml
.github/workflows/: deploy.yml  pylint.yml  tests.yml
.qodana/code-coverage/: cov.xml
backend/: pyproject.toml
backend/app/: main.py
backend/app/auth/: __init__.py  jwt_utils.py  settings.py
backend/app/db/: __init__.py  base.py  conn.py  settings.py
backend/app/messages/: __init__.py  async_broker.py  client.py  event.py  settings.py  subscriber.py
backend/app/middlewares/: auth.py  send_message.py
backend/app/models/: __init__.py  api_response.py  enterprise.py  role.py  scope.py  token.py  user.py
backend/app/router/: __init__.py  enterprise.py  liveness.py  login.py  user.py  utils.py
backend/tests/: conftest.py  enterprise_route_test.py  manage_jwt_test.py  message_receive_test.py  test_message_send.py  test_user_route_test.py  token_endpoint_test.py  user_model_test.py  user_route_test.py
k8s/: db.yaml  deploy.yaml  minions.yml  pv.yaml  pvc.yaml
